LPS-83016 Added tooltip to Web Content portlet's content options menu

--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language.properties
@@ -24,6 +24,7 @@ characters-blacklist=Characters Blacklist
 check-interval=Check Interval
 choose-structure=Choose Structure
 content-metadata-asset-addon-entry-keys=Content Metadata Asset Addon Entry Keys
+content-options=Content Options
 custom-token-names=Custom Token Names
 custom-token-values=Custom Token Values
 database-content-keyword-search-enabled=Database Content Keyword Search Enabled
